fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1 {
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
     margin: 0 auto;
-    width: 90%;
+    width: 95%;
 }
 
 .employeeContainer {
@@ -47,7 +47,7 @@ h1 {
 }
 
 .employeeImage {
-    width: 6.5rem;
+    width: 5.5rem;
     border-radius: 50%;
 }
 
@@ -56,11 +56,11 @@ h1 {
 }
 .employeeEmail, .employeeName, .employeeLocation {
     margin: .4rem;
-    font-size: 1rem;
+    font-size: .9rem;
 }
 .employeeEmail, .employeeLocation, .address, .phone, .birthday {
     color: gray;
-    font-size: .85rem;
+    font-size: .7rem;
 }
 
 /* MODAL */
